# ECG_lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md
app/ADS1292R_board/: library.properties
app/monitor/: all_csv2parquet.sh  configuration.py  csv2parquet.py  functions.py  monitor_250hz.py  monitor_50hz.py  monitor_mini_250hz.py  roast_monitor.py
app/viewer_gui/: ecg_viewer.py  ecg_viewer_diff.py  ecg_viewer_multi.py
debug_tools/: ecg_functions.py  ecg_plot.ipynb  ecg_timestamp.ipynb  ecg_timestamp.py  ecg_yield.ipynb  ecg_yield.py  minimal_yield.py
docs/: cli.md
ecg_core/: rr_hr_hrv.py
ecg_lab/: __init__.py  cli.py  config.py  pipeline.py
ecg_lab/app/: __init__.py  monitor.py  viewer.py
ecg_lab/core/: __init__.py  rr_hr_hrv.py
labeling/: json_read.ipynb  labling.json  rr_hr_hrv.py
machine_learning/: README.md  b2g_concat.py  bad2good_idx.py  cnn_3classes.py  concat_label_df.ipynb  data_preproccessing.ipynb  good_bad_split_by_hand.ipynb  good_bad_split_by_threshold.ipynb  save_good_bad_jpg.ipynb
machine_learning/notebooks/: 10s_chunks.ipynb  good_bad_split_by_threshold.ipynb  training.ipynb
machine_learning/predict/: predict.ipynb  split_and_train.py
ml_3classes/: cnn_3classes.py
monitor/: configuration.py  csv2parquet.py
neurokit2/: ecg_viewer_label.py  ecg_viewer_multi.py  get_rr_gsb.ipynb  hr_plot.ipynb  rr_hr_hrv.py
tests/: test_cli.py  test_config.py  test_pipeline.py  test_rr_hr_hrv.py  test_viewer_meanhr.py
viewer_gui/: ecg_slider.ipynb  ecg_viewer_multi.py
(+29 files in other folders)
